# src/model/error.go
@@ -1,0 +1,6 @@
+package model
+
+type ResponseError struct {
+	Code int `json:"code"`
+	Status string `json:"status"`
+}
